runs/8B_hero_stq_m32/pipeline_20250917_211031.log

=========================================
Starting pipeline at Wed Sep 17 21:10:31 PDT 2025
=========================================


=========================================
TRAIN + PER-EPOCH EVAL
=========================================


=========================================
EPOCH 1/12
=========================================

  File "/projects/m000066/sujinesh/LatentWire/latentwire/train.py", line 157
    \1
     ^
SyntaxError: unexpected character after line continuation character
